--- a/src/assets/scss/material-kit-pro-react.scss
+++ b/src/assets/scss/material-kit-pro-react.scss
@@ -28,6 +28,6 @@
 // @import "plugins/plugin-datetime-picker";
 @import "plugins/plugin-nouislider";
 @import "plugins/plugin-react-datetime";
-//@import "plugins/plugin-react-image-gallery";
+@import "plugins/plugin-react-image-gallery";
 @import "plugins/plugin-react-slick";
 @import "plugins/plugin-react-tagsinput";
