--- a/dex-pricing-calculator/components/DecorationsDetailsForm/DecorationsDetailsForm.module.css
+++ b/dex-pricing-calculator/components/DecorationsDetailsForm/DecorationsDetailsForm.module.css
@@ -9,4 +9,14 @@ table {
     text-align: center;
   }
 
-  
+  .instructions {
+    border: 1px solid #000;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .allServicesTable {
+    margin-bottom: 0;
+  }
