--- a/src/components/Header/UtilityMenu.css
+++ b/src/components/Header/UtilityMenu.css
@@ -1,24 +1,32 @@
+
+/* .dropdown {
+  position: relative;
+  display: inline-block;
+} */
+
+
 /* Navbar container */
 .navbar {
-    overflow: hidden;
-    background-color: #333;
+    overflow: hidden; 
+    background-color: #E10106;
     font-family: Arial;
   }
   
   /* Links inside the navbar */
   .navbar a {
-    float: left;
+     float: left; 
     font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    overflow: visible !important;
   }
   
-  /* The dropdown container */
   .dropdown {
     float: left;
-    overflow: hidden;
+    height: 100px;
+    overflow: visible;
   }
   
   /* Dropdown button */
@@ -41,7 +49,7 @@
   /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f9f9f9;
     width: 100%;
     left: 0;
@@ -49,22 +57,17 @@
     z-index: 1;
   }
   
-  /* Mega Menu header, if needed */
-  .dropdown-content .header {
-    background: red;
-    padding: 16px;
-    color: white;
-  }
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
+    width: 100%;
   }
   
-  /* Create three equal columns that floats next to each other */
+  /* Create 4 equal columns that floats next to each other */
   .column {
     float: left;
-    width: 33.33%;
+    width: auto;
     padding: 10px;
     background-color: #ccc;
     height: 250px;
@@ -91,3 +94,7 @@
     display: table;
     clear: both;
   }
+
+
+
+
