--- a/src/components/Header/UtilityMenu.css
+++ b/src/components/Header/UtilityMenu.css
@@ -1,100 +1,160 @@
-
-/* .dropdown {
-  position: relative;
-  display: inline-block;
-} */
-
-
-/* Navbar container */
-.navbar {
-    overflow: hidden; 
-    background-color: #E10106;
-    font-family: Arial;
-  }
-  
-  /* Links inside the navbar */
-  .navbar a {
-     float: left; 
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    overflow: visible !important;
-  }
-  
-  .dropdown {
-    float: left;
-    height: 100px;
-    overflow: visible;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 16px;
+/* Reset */
+.nav,
+.nav a,
+.nav ul,
+.nav li,
+.nav div,
+.nav form,
+.nav input {
+    margin: 0;
+    padding: 0;
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: relative;
-    background-color: #f9f9f9;
-    width: 100%;
-    left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-    width: 100%;
-  }
-  
-  /* Create 4 equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: auto;
-    padding: 10px;
-    background-color: #ccc;
-    height: 250px;
-  }
-  
-  /* Style links inside the columns */
-  .column a {
-    float: none;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a background color on hover */
-  .column a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+}
+ 
+.nav a { text-decoration: none; }
+ 
+.nav li { list-style: none; }
+
+/* Menu Container */
+.nav {
+  display: inline-block;
+  position: relative;
+  cursor: default;
+  z-index: 500;
+}
+
+/* Menu List */
+.nav > li {
+  display: block;
+  float: left;
+}
+
+/* Menu Links */
+.nav > li > a {
+  position: relative;
+  display: block;
+  z-index: 510;
+  height: 54px;
+  padding: 0 20px;
+  line-height: 54px;
+   
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  color: #fcfcfc;
+  text-shadow: 0 0 1px rgba(0,0,0,.35);
+
+  background: #372f2b;
+  border-left: 1px solid #4b4441;
+  border-right: 1px solid #312a27;
+
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.nav > li:hover > a { background: #4b4441; }
+ 
+.nav > li:first-child > a {
+    border-radius: 3px 0 0 3px;
+    border-left: none;
+}
+
+/* Search Form */
+.nav > li.nav-search > form {
+  position: relative;
+  width: inherit;
+  height: 54px;
+  z-index: 510;
+  border-left: 1px solid #4b4441;
+}
+
+.nav > li.nav-search input[type="text"] {
+  display: block;
+  float: left;
+  width: 1px;
+  height: 24px;
+  padding: 15px 0;
+  line-height: 24px;
+
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  color: #999999;
+  text-shadow: 0 0 1px rgba(0,0,0,.35);
+
+  background: #372f2b;
+
+  -webkit-transition: all .3s ease 1s;
+  -moz-transition: all .3s ease 1s;
+  -o-transition: all .3s ease 1s;
+  -ms-transition: all .3s ease 1s;
+  transition: all .3s ease 1s;
+}
+
+.nav > li.nav-search input[type="text"]:focus { color: #fcfcfc; }
+
+.nav > li.nav-search input[type="text"]:focus,
+.nav > li.nav-search:hover input[type="text"] {
+  width: 110px;
+  padding: 15px 20px;
+
+  -webkit-transition: all .3s ease .1s;
+  -moz-transition: all .3s ease .1s;
+  -o-transition: all .3s ease .1s;
+  -ms-transition: all .3s ease .1s;
+  transition: all .3s ease .1s;
+}
+
+.nav > li.nav-search input[type="submit"] {
+  display: block;
+  float: left;
+  width: 20px;
+  height: 54px;
+  padding: 0 25px;
+  cursor: pointer;
+
+  background: #372f2b url(../../images/search-icon.png) no-repeat center center;
+
+  border-radius: 0 3px 3px 0;
+
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.nav > li.nav-search input[type="submit"]:hover { background-color: #4b4441; }
+
+/* Menu Dropdown */
+.nav > li > div {
+  position: absolute;
+  display: block;
+  width: 100%;
+  top: 50px;
+  left: 0;
+
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+
+  background: #ffffff;
+  border-radius: 0 0 3px 3px;
+
+  -webkit-transition: all .3s ease .15s;
+  -moz-transition: all .3s ease .15s;
+  -o-transition: all .3s ease .15s;
+  -ms-transition: all .3s ease .15s;
+  transition: all .3s ease .15s;
+}
 
 
-
-
+.nav > li:hover > div {
+  opacity: 1;
+  visibility: visible;
+  overflow: visible;
+}
