--- a/src/components/Header/UtilityMenu.css
+++ b/src/components/Header/UtilityMenu.css
@@ -12,6 +12,9 @@
     outline: none;
 }
  
+
+
+
 .nav a { text-decoration: none; }
  
 .nav li { list-style: none; }
@@ -28,6 +31,17 @@
 .nav > li {
   display: block;
   float: left;
+  height: 54px;
+}
+
+
+#gatsby-focus-wrapper  a{
+  font-size: 11px;
+  color: #fff;
+}
+
+#gatsby-focus-wrapper ul li a{
+  color: #fff;
 }
 
 /* Menu Links */
@@ -36,24 +50,34 @@
   display: block;
   z-index: 510;
   height: 54px;
-  padding: 0 20px;
+  padding: 0 10px;
   line-height: 54px;
+
+
    
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 12px;
   color: #fcfcfc;
   text-shadow: 0 0 1px rgba(0,0,0,.35);
 
-  background: #372f2b;
-  border-left: 1px solid #4b4441;
-  border-right: 1px solid #312a27;
+  background: #DE0106;
+  border-left: 1px solid #fcfcfc;
+  border-right: 1px solid #fcfcfc;
 
   -webkit-transition: all .3s ease;
   -moz-transition: all .3s ease;
   -o-transition: all .3s ease;
   -ms-transition: all .3s ease;
   transition: all .3s ease;
+}
+
+
+
+a {
+  color: #000 !important;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 .nav > li:hover > a { background: #4b4441; }
@@ -132,18 +156,18 @@
 
 /* Menu Dropdown */
 .nav > li > div {
-  position: absolute;
   display: block;
-  width: 100%;
-  top: 50px;
+  width: auto;
   left: 0;
+  padding: 10px;
 
   opacity: 0;
   visibility: hidden;
   overflow: hidden;
 
-  background: #ffffff;
+  background: #DE0106;
   border-radius: 0 0 3px 3px;
+  color: #fff;
 
   -webkit-transition: all .3s ease .15s;
   -moz-transition: all .3s ease .15s;
@@ -158,3 +182,4 @@
   visibility: visible;
   overflow: visible;
 }
+
