--- a/src/components/Header/UtilityMenu.css
+++ b/src/components/Header/UtilityMenu.css
@@ -34,6 +34,11 @@
   height: 54px;
 }
 
+.categories_menu{
+  background-color: #c9c3c1;
+  height: 50px;
+  margin: auto;
+}
 
 #gatsby-focus-wrapper  a{
   font-size: 11px;
@@ -52,16 +57,15 @@
   height: 54px;
   padding: 0 10px;
   line-height: 54px;
-
-
-   
+text-transform: uppercase;
+ 
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-size: 12px;
   color: #fcfcfc;
   text-shadow: 0 0 1px rgba(0,0,0,.35);
 
-  background: #DE0106;
+  background: #c9c3c1;
   border-left: 1px solid #fcfcfc;
   border-right: 1px solid #fcfcfc;
 
@@ -70,6 +74,7 @@
   -o-transition: all .3s ease;
   -ms-transition: all .3s ease;
   transition: all .3s ease;
+  text-align: center;
 }
 
 
@@ -165,7 +170,7 @@ a {
   visibility: hidden;
   overflow: hidden;
 
-  background: #DE0106;
+  background: #c9c3c1;
   border-radius: 0 0 3px 3px;
   color: #fff;
 
